data/all_generated_tests/raw_wast_tests/call_indirect_EdgeCaseFailuresinbr_table_4657.wast
;; 6. **Incomplete Operand Stack**:    - Test a `call_indirect` with insufficient operands on the stack for the target function, ensuring a trap occurs for underflow.    - This checks if both implementations validate operand stack requirements before execution.    - It relates to `br_table` for verifying the correct operand stack depth and operand integrity.

(assert_invalid
  (module
    (type (func (param i32 i32)))
    (table 0 funcref)
    (func $incomplete-stack (call_indirect (type 0) (i32.const 1)))
  )
  "type mismatch"
)